Fix TimeData Graph so elements do not overlap it and bars go from bottom to top

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -121,8 +121,12 @@
 }
 
 /* TIME DATA GRAPH STYLING */
-.time-data-graph-component-container {
+.upload-times {
+
+}
+/*.time-data-graph-component-container {
     width: 80%;
+    min-height: 50%;
 }
 
 .time-data-graph-container {
@@ -141,3 +145,8 @@
     background-color: blue;
     width: 2%;
 }
+
+.all-stats-container {
+    display: flex;
+    flex-wrap: wrap;
+}*/
